tsconfig: set allowJs to true

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "target": "esnext",
     "module": "commonjs",
     "rootDir": "./src",
-    "allowJs": false,
+    "allowJs": true,
     "outDir": "./dist",
     "noEmitOnError": true,
     "isolatedModules": true,
