--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "private": true,
   "scripts": {
     "start": "ts-node ./src/bot.ts",
-    "build": "tsc ."
+    "build": "tsc .",
+    "tools:arcsongassets": "ts-node ./src/tools/arcsongassets.ts"
   },
   "dependencies": {
     "@koishijs/plugin-adapter-onebot": "^4.0.0",
