--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "lancelot",
-  "version": "0.1.0",
-  "description": "b1acksoil's personal bot, made with love",
+  "version": "0.2.0",
+  "description": "A cross-platform bot, made with love",
   "author": "b1acksoil <bs@blacksoil.top>",
   "license": "MIT",
   "private": true,
@@ -15,7 +15,7 @@
     "@koishijs/plugin-database-sqlite": "^1.0.0",
     "@koishijs/plugin-echo": "^1.0.0",
     "better-sqlite3": "^7.5.0",
-    "botarcapi_lib": "^1.1.2",
+    "botarcapi_lib": "^1.1.3",
     "canvas": "^2.9.0",
     "koishi": "^4.0.1",
     "uuid": "^8.3.2"
