--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "better-sqlite3": "^7.5.0",
     "botarcapi_lib": "^1.1.3",
     "canvas": "^2.9.0",
-    "koishi": "^4.0.1",
+    "koishi": "4.2.1",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/better-sqlite3": "^7.4.2",
     "@types/uuid": "^8.3.4",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.4"
