--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,14 +4,12 @@
     "module": "commonjs",
     "allowJs": true,
     "outDir": "./dist",
-    "resolveJsonModule": true,
-    "noEmitOnError": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
-    "strict": true
+    "strict": true,
+    "skipLibCheck": true
   },
   "include": [
     "./src/**/*",
-    "./package.json"
   ]
 }
