--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lancelot",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "A cross-platform bot, made with love",
   "author": "b1acksoil <bs@blacksoil.top>",
   "license": "MIT",
@@ -18,12 +18,10 @@
     "better-sqlite3": "^7.5.0",
     "botarcapi_lib": "^1.1.3",
     "canvas": "^2.9.0",
-    "koishi": "4.2.1",
-    "uuid": "^8.3.2"
+    "koishi": "4.2.1"
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.4.2",
-    "@types/uuid": "^8.3.4",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.4"
   }
