--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@koishijs/plugin-adapter-onebot": "^4.0.0",
     "@koishijs/plugin-database-sqlite": "^1.0.0",
     "@koishijs/plugin-echo": "^1.0.0",
+    "axios": "^0.26.0",
     "better-sqlite3": "^7.5.0",
     "botarcapi_lib": "^1.1.3",
     "canvas": "^2.9.0",
