--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "better-sqlite3": "^7.5.0",
     "botarcapi_lib": "^1.1.3",
     "canvas": "^2.9.0",
-    "koishi": "4.2.1"
+    "koishi": "^4.4.1"
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.4.2",
