--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "better-sqlite3": "^7.5.0",
     "botarcapi_lib": "^1.1.3",
     "canvas": "^2.9.0",
+    "jimp": "^0.16.1",
     "koishi": "^4.4.2"
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.4.2",
+    "@types/jimp": "^0.2.28",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.4"
   }
