--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "botarcapi_lib": "^1.1.3",
     "canvas": "^2.9.0",
     "jimp": "^0.16.1",
-    "koishi": "^4.4.2"
+    "koishi": "^4.4.2",
+    "md5": "^2.3.0"
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.4.2",
     "@types/jimp": "^0.2.28",
+    "@types/md5": "^2.3.2",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.4"
   }
